# nn

./: AI_AGENT.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
nn/: __init__.py
nn/clients/: __init__.py  bps-web-api-docs.md  bps.py  bps_web_api_client.py
nn/signals/bps/: bps-web-api-docs.md  client.py
notebooks/marimo/: 01_bps_cpi_structure_and_sources.py  test_bps_client.py
proposals/: 202605091844-project-structure-chatgpt.md
