[project]
name = "nn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "marimo>=0.23.5",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.3.1",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
